# DocumentIntelligenceServer

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: config.py  errors.py  models.py  text.py
app/ingestion/: chunker.py  embedder.py  parsers.py  pipeline.py
app/mcp_server/: auth.py  server.py
app/retrieval/: service.py
app/stores/: metadata_repo.py  qdrant_store.py
app/web/: auth.py  routes.py
app/web/templates/: index.html
docs/: manual-walkthrough.md  part1-ai-assisted-coding.md
docs/superpowers/plans/: 2026-07-11-document-intelligence-server.md
docs/superpowers/specs/: 2026-07-11-document-intelligence-design.md
sample_docs/: aml-policy.md  hr-handbook.md
scripts/: fetch_corpus.py  smoke.py
test_corpus/meridian/: COMPANY.md  QUERY-PLAYBOOK.md  TAGS.md
test_corpus/meridian/docs/: kestrel-api-changelog.md  kestrel-settlement-policy.md  meridian-aml-policy.md  meridian-faq-export.txt  meridian-glossary.txt  meridian-hr-handbook.md  meridian-remote-work-policy.md
test_corpus/meridian/generators/: _common.py  gen_business_continuity.py  gen_onboarding_guide.py  gen_product_catalog.py  gen_sanctions_standard.py
tests/: conftest.py  test_chunker.py  test_config.py  test_embedder.py  test_mcp_server.py  test_metadata_repo.py  test_parsers.py  test_pipeline.py  test_qdrant_store.py  test_search_service.py  test_text.py  test_web.py
