[project]
name = "document-intelligence-server"
version = "0.1.0"
description = "RAG knowledge base with MCP server (Streamable HTTP)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "mcp>=1.16,<2",
    "qdrant-client[fastembed]>=1.12",
    "openai>=1.40",
    "pydantic-settings>=2.4",
    "tiktoken>=0.7",
    "pdfplumber>=0.11",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.6",
    "reportlab>=4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
